@@ -11,3 +11,5 @@ Date: TODO
     - trigger_effect.recoil should now work on all entities, not just characters and vehicles
   Changes:
     - Using trigger_effect.recoil as a source_effect is now deprecated
+  Bugfixes:
+    - Fix crash when entities without unit number are deleted from entity_dict.
